--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.1.4",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
+    "cookie-parser": "^1.4.6",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "plop": "^3.1.1",
+    "redis": "3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "run-script-webpack-plugin": "^0.1.1",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.11"
   },
@@ -48,10 +53,12 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
