--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "autocannon": "^7.10.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.3",
     "cache-manager": "^5.1.1",
