--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "helmet": "^6.0.1",
-    "mysql": "^2.18.1",
+    "mysql": "npm:mysql2@^2.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "plop": "^3.1.1",
